--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>guess my number!</h1>
         <div class="secret">?</div>
     </header>
-    <main>
+    <section>
         <div class="left">
             <input type="number" class="guess" placeholder="0 - 100">
             <button type="button" class="check">check</button>
@@ -26,7 +26,10 @@
             <p class="chance">⏱ chance: <span>20</span></p>
             <p class="score">🥉 high-score: <span>0</span></p>
         </div>
-    </main>
+    </section>
+    <footer>
+        <a href="https://codepen.io/mohammad-akbar63" target="_blank">&copy; made by mohammad akbar</a>
+    </footer>
 
     <script src="main.js"></script>
 </body>
